--- a/package.json
+++ b/package.json
@@ -17,18 +17,29 @@
   },
   "homepage": "https://github.com/zybbyzaa/ZBlog#readme",
   "dependencies": {
-    "babel-core": "^6.4.5",
-    "babel-polyfill": "^6.3.14",
-    "babel-preset-es2015": "^6.3.13",
     "koa": "^1.1.2",
     "koa-bodyparser": "^2.0.1",
     "koa-ejs": "^3.0.0",
     "koa-logger": "^1.3.0",
     "koa-onerror": "^1.2.1",
     "koa-router": "^5.3.0",
-    "koa-static": "^2.0.0"
+    "koa-static": "^2.0.0",
+    "history": "^1.14.0",
+    "react": "^0.14.2",
+    "react-dom": "^0.14.2",
+    "react-redux": "^4.0.0",
+    "react-router": "^1.0.0",
+    "redux": "^3.0.4",
+    "react-router-redux": "^2.1.0"
   },
   "devDependencies": {
-    "nodemon": "^1.8.1"
+    "babel-core": "^6.4.5",
+    "babel-polyfill": "^6.3.14",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-loader": "^6.2.1",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-1": "^6.3.13",
+    "nodemon": "^1.8.1",
+    "webpack": "^1.12.12"
   }
 }
