--- a/package.json
+++ b/package.json
@@ -34,12 +34,17 @@
   },
   "devDependencies": {
     "babel-core": "^6.4.5",
+    "babel-loader": "^6.2.1",
     "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
-    "babel-loader": "^6.2.1",
     "babel-preset-react": "^6.3.13",
-    "babel-preset-stage-1": "^6.3.13",
+    "babel-preset-react-hmre": "^1.1.0",
+    "babel-preset-stage-0": "^6.3.13",
+    "clean-webpack-plugin": "^0.1.8",
+    "html-webpack-plugin": "^2.8.1",
     "nodemon": "^1.8.1",
-    "webpack": "^1.12.12"
+    "webpack": "^1.12.12",
+    "webpack-dev-middleware": "^1.5.1",
+    "webpack-hot-middleware": "^2.6.4"
   }
 }
