--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "a blog build with koa、react、redux",
   "main": "./server/bin/www.js",
   "scripts": {
-    "server-start": "node_modules/.bin/nodemon -w ./server ./server/bin/www"
+    "start": "npm run client-build && npm run server-start",
+    "server-start": "NODE_ENV=production node ./server/bin/www",
+    "client-watch": "node ./webpack/webpack.server.js",
+    "client-build": "NODE_ENV=production node_modules/.bin/webpack -p --config ./webpack/webpack.config.prod"
   },
   "repository": {
     "type": "git",
@@ -17,6 +20,8 @@
   },
   "homepage": "https://github.com/zybbyzaa/ZBlog#readme",
   "dependencies": {
+    "fbjs": "^0.7.2",
+    "history": "^1.14.0",
     "koa": "^1.1.2",
     "koa-bodyparser": "^2.0.1",
     "koa-ejs": "^3.0.0",
@@ -24,15 +29,16 @@
     "koa-onerror": "^1.2.1",
     "koa-router": "^5.3.0",
     "koa-static": "^2.0.0",
-    "history": "^1.14.0",
+    "normalize.css": "^3.0.3",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.0",
-    "redux": "^3.0.4",
-    "react-router-redux": "^2.1.0"
+    "react-router-redux": "^2.1.0",
+    "redux": "^3.0.4"
   },
   "devDependencies": {
+    "autoprefixer": "^6.3.1",
     "babel-core": "^6.4.5",
     "babel-loader": "^6.2.1",
     "babel-polyfill": "^6.3.14",
@@ -41,8 +47,19 @@
     "babel-preset-react-hmre": "^1.1.0",
     "babel-preset-stage-0": "^6.3.13",
     "clean-webpack-plugin": "^0.1.8",
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.8.1",
+    "less": "^2.6.0",
+    "less-loader": "^2.2.2",
     "nodemon": "^1.8.1",
+    "postcss-color-rebeccapurple": "^2.0.0",
+    "postcss-cssnext": "^2.4.0",
+    "postcss-loader": "^0.8.0",
+    "redux-logger": "^2.5.0",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.12",
     "webpack-dev-middleware": "^1.5.1",
     "webpack-hot-middleware": "^2.6.4"
