--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "koa-onerror": "^1.2.1",
     "koa-router": "^5.3.0",
     "koa-static": "^2.0.0",
-    "normalize.css": "^3.0.3",
+    "mongoose": "^4.4.3",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
     "react-redux": "^4.0.0",
