--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "koa-router": "^5.3.0",
     "koa-static": "^2.0.0",
     "mongoose": "^4.4.3",
+    "node-fetch": "^1.3.3",
+    "normalizr": "^2.0.0",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
     "react-redux": "^4.0.0",
