--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/zybbyzaa/ZBlog#readme",
   "dependencies": {
+    "axios": "^0.9.1",
+    "halogen": "^0.1.10",
     "history": "^1.14.0",
     "koa": "^1.1.2",
     "koa-bodyparser": "^2.0.1",
@@ -51,9 +53,11 @@
     "babel-preset-stage-0": "^6.3.13",
     "clean-webpack-plugin": "^0.1.8",
     "css-loader": "^0.23.1",
+    "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.8.1",
+    "http-proxy-middleware": "^0.10.0",
     "less": "^2.6.0",
     "less-loader": "^2.2.2",
     "nodemon": "^1.8.1",
