--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "node-fetch": "^1.3.3",
     "normalizr": "^2.0.0",
     "react": "^0.14.2",
+    "react-addons-css-transition-group": "^0.14.7",
     "react-dom": "^0.14.2",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.0",
