--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a blog build with koa、react、redux",
   "main": "./server/bin/www.js",
   "scripts": {
-    "start": "npm run client-build && npm run server-start",
+    "start": "npm run server-start",
     "startDB": "./server/bin/startDB.sh",
     "server-start": "NODE_ENV=production node ./server/bin/www",
     "client-watch": "node ./webpack/webpack.server.js",
@@ -22,6 +22,11 @@
   "homepage": "https://github.com/zybbyzaa/ZBlog#readme",
   "dependencies": {
     "axios": "^0.9.1",
+    "babel-core": "^6.4.5",
+    "babel-polyfill": "^6.3.14",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
     "halogen": "^0.1.10",
     "history": "^1.14.0",
     "koa": "^1.1.2",
