--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "koa-onerror": "^1.2.1",
     "koa-router": "^5.3.0",
     "koa-static": "^2.0.0",
+    "markdown": "^0.5.0",
     "moment": "^2.11.2",
     "mongoose": "^4.4.3",
     "node-fetch": "^1.3.3",
