--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "koa-router": "^5.3.0",
     "koa-static": "^2.0.0",
     "markdown": "^0.5.0",
+    "markdown-it": "^6.0.0",
+    "markdown-js": "0.0.3",
     "moment": "^2.11.2",
     "mongoose": "^4.4.3",
     "node-fetch": "^1.3.3",
@@ -63,11 +65,13 @@
     "http-proxy-middleware": "^0.10.0",
     "less": "^2.6.0",
     "less-loader": "^2.2.2",
+    "node-sass": "^3.4.2",
     "nodemon": "^1.8.1",
     "postcss-color-rebeccapurple": "^2.0.0",
     "postcss-cssnext": "^2.4.0",
     "postcss-loader": "^0.8.0",
     "redux-logger": "^2.5.0",
+    "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.12",
