--- a/package.json
+++ b/package.json
@@ -65,9 +65,7 @@
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.10.0",
-    "less": "^2.6.0",
-    "less-loader": "^2.2.2",
-    "nodemon": "^1.8.1",
+    "node-sass": "^3.4.2",
     "postcss-color-rebeccapurple": "^2.0.0",
     "postcss-cssnext": "^2.4.0",
     "postcss-loader": "^0.8.0",
