修改获取数据的方法为fetch,修改了部分组件

--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.10.0",
+    "immutable": "^3.7.6",
+    "isomorphic-fetch": "^2.2.1",
     "less": "^2.6.0",
     "less-loader": "^2.2.2",
     "node-sass": "^3.4.2",
@@ -70,6 +72,12 @@
     "postcss-color-rebeccapurple": "^2.0.0",
     "postcss-cssnext": "^2.4.0",
     "postcss-loader": "^0.8.0",
+    "querystring": "^0.2.0",
+    "redux-devtools": "^3.1.1",
+    "redux-devtools-chart-monitor": "^1.2.0",
+    "redux-devtools-dock-monitor": "^1.1.0",
+    "redux-devtools-log-monitor": "^1.0.5",
+    "redux-immutablejs": "0.0.8",
     "redux-logger": "^2.5.0",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
