--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm run client-build && npm run server-start",
     "startDB": "./server/bin/startDB.sh",
-    "server-start": "node ./server/bin/www",
+    "server-start": "node_modules/.bin/nodemon ./server/bin/www",
     "client-watch": "node ./webpack/webpack.server.js",
     "client-build": "node_modules/.bin/webpack -p --config ./webpack/webpack.config.prod"
   },
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/zybbyzaa/ZBlog#readme",
   "dependencies": {
     "axios": "^0.9.1",
+    "crypto": "0.0.3",
     "halogen": "^0.1.10",
     "history": "^1.14.0",
     "koa": "^1.1.2",
@@ -73,6 +74,7 @@
     "postcss-cssnext": "^2.4.0",
     "postcss-loader": "^0.8.0",
     "querystring": "^0.2.0",
+    "react-cookie": "^0.4.5",
     "redux-devtools": "^3.1.1",
     "redux-devtools-chart-monitor": "^1.2.0",
     "redux-devtools-dock-monitor": "^1.1.0",
