--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "start": "npm run client-build && npm run server-start",
     "startDB": "./server/bin/startDB.sh",
-    "server-start": "node_modules/.bin/nodemon ./server/bin/www",
+    "server-watch": "node_modules/.bin/nodemon ./server/bin/www",
     "client-watch": "node ./webpack/webpack.server.js",
+    "server-start": "node ./server/bin/www",
     "client-build": "node_modules/.bin/webpack -p --config ./webpack/webpack.config.prod"
   },
   "repository": {
@@ -22,14 +23,23 @@
   "homepage": "https://github.com/zybbyzaa/ZBlog#readme",
   "dependencies": {
     "axios": "^0.9.1",
+    "co": "^4.6.0",
     "crypto": "0.0.3",
     "halogen": "^0.1.10",
     "history": "^1.14.0",
     "koa": "^1.1.2",
     "koa-bodyparser": "^2.0.1",
+    "koa-compose": "^2.4.0",
+    "koa-compress": "^1.0.9",
+    "koa-cors": "0.0.16",
     "koa-ejs": "^3.0.0",
+    "koa-generic-session": "^1.10.1",
+    "koa-generic-session-mongo": "^0.2.5",
+    "koa-json": "^1.1.1",
+    "koa-jwt": "^1.1.2",
     "koa-logger": "^1.3.0",
     "koa-onerror": "^1.2.1",
+    "koa-passport": "^1.3.0",
     "koa-router": "^5.3.0",
     "koa-static": "^2.0.0",
     "markdown": "^0.5.0",
@@ -39,6 +49,7 @@
     "mongoose": "^4.4.3",
     "node-fetch": "^1.3.3",
     "normalizr": "^2.0.0",
+    "passport-local": "^1.0.0",
     "react": "^0.14.2",
     "react-addons-css-transition-group": "^0.14.7",
     "react-dom": "^0.14.2",
