--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "mongoose": "^4.4.3",
     "node-fetch": "^1.3.3",
     "normalizr": "^2.0.0",
+    "passport-github": "^1.1.0",
     "passport-local": "^1.0.0",
     "react": "^0.14.2",
     "react-addons-css-transition-group": "^0.14.7",
