--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   },
   "homepage": "https://github.com/zybbyzaa/ZBlog#readme",
   "dependencies": {
-    "axios": "^0.9.1",
     "bunyan": "^1.8.0",
     "co": "^4.6.0",
     "crypto": "0.0.3",
@@ -44,17 +43,14 @@
     "koa-passport": "^1.3.0",
     "koa-router": "^5.3.0",
     "koa-static": "^2.0.0",
-    "markdown": "^0.5.0",
-    "markdown-it": "^6.0.0",
     "markdown-js": "0.0.3",
     "moment": "^2.11.2",
+    "mongodb-core": "^1.3.10",
     "mongoose": "^4.4.3",
-    "node-fetch": "^1.3.3",
     "normalizr": "^2.0.0",
     "passport-github": "^1.1.0",
     "passport-local": "^1.0.0",
     "react": "^0.14.2",
-    "react-addons-css-transition-group": "^0.14.7",
     "react-dom": "^0.14.2",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.0",
@@ -80,8 +76,6 @@
     "http-proxy-middleware": "^0.10.0",
     "immutable": "^3.7.6",
     "isomorphic-fetch": "^2.2.1",
-    "less": "^2.6.0",
-    "less-loader": "^2.2.2",
     "node-sass": "^3.4.2",
     "nodemon": "^1.8.1",
     "postcss-color-rebeccapurple": "^2.0.0",
@@ -89,6 +83,7 @@
     "postcss-loader": "^0.8.0",
     "querystring": "^0.2.0",
     "react-cookie": "^0.4.5",
+    "react-modal": "^0.6.1",
     "redux-devtools": "^3.1.1",
     "redux-devtools-chart-monitor": "^1.2.0",
     "redux-devtools-dock-monitor": "^1.1.0",
