--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "win-start": "set NODE_ENV=production && npm run client-build && npm run server-start",
     "win-watch": "set NODE_ENV=development && npm run server-watch",
+    "linux-start": "NODE_ENV=production && npm run client-build && npm run server-start",
+    "linux-watch": "NODE_ENV=development && npm run server-watch",
     "server-watch": "node_modules/.bin/nodemon ./server/bin/www | npm run log",
     "client-watch": "node ./webpack/webpack.server.js",
     "server-start": "node ./server/bin/www | npm run log",
